--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,6 @@ header{
 	.title {
 		text-align: center;
 		font-size: 30px;
-		margin-top: -2%;
 	}
 	.billedegalleri-title {
 		text-align: center;
@@ -299,10 +298,85 @@ header{
         border-radius: 5px;
     }
     .maps {
-        width: 90%;
-        margin-left: 5%;
+        width: 70%;
+        margin-left: 15%;
+        margin-bottom: 10px;
     }
-    
+    /* events main content */
+	
+	
+	
+.grid-container-events {
+  display: grid;
+  grid-gap: 10px;
+  padding: 20px;
+  grid-template: 100% 50% 100% 1fr / 1fr 1fr 1fr;
+  text-align: center;
+  font-size: 20px;
+}
+
+
+.item1{
+    grid-column: 1 / 4;
+    grid-row: 1 / 2;
+}
+
+.item2 {
+    background-color: #0067E4;
+    grid-column: 1 / 2;
+    grid-row: 2/ 3;
+}
+
+                         
+
+ .item3 {
+    background-color: #0067E4;    
+   grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+.item4 {
+    background-color: #0067E4;
+    grid-column: 3 / 4;
+    grid-row: 2/ 3;
+}
+
+.item5 {
+    background-color: orange;
+    grid-column: 1 / 2;
+    grid-row: 4/ 5;
+}
+
+.item6 {
+	background-color: orange;
+	grid-column: 2 / 3;
+	grid-row: 4 / 5;
+}
+.item7 {
+	background-color: orange;
+	grid-column: 3 / 4;
+	grid-row: 4 / 5;
+}
+.item8 {
+	grid-column: 1 / 4;
+	grid-row: 3 / 4;
+}
+
+
+	img{
+		width: 100%;
+	}	
+	
+	
+	.events-paragraf{
+		padding: 15px;
+	}	
+	
+	
+	button{
+		border-style: solid;
+		padding: 15px;
+	}
 }
 
 /* Fra 1024 px - Desktop */	
@@ -317,6 +391,8 @@ header{
 		padding: 0 5% 0 5%;
 	}
 
+    
+    /*footer */
 	 footer {
         padding-left: 1rem;
         background-color: black;
